[gd_scene load_steps=20 format=2]

[ext_resource path="res://Sprites/froggy.png" type="Texture" id=1]
[ext_resource path="res://Frogger.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": false,
"name": "Attack",
"speed": 7.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), null ],
"loop": false,
"name": "Die",
"speed": 20.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10, 6.5 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 13.5, 69 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 8, 7 )

[node name="Frogger" type="StaticBody2D"]
z_index = 30
collision_mask = 0
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "Idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5.5 )
shape = SubResource( 6 )

[node name="DetectionArea" type="Area2D" parent="."]
position = Vector2( 0, 5.5 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2( 0.5, 75.5 )
shape = SubResource( 14 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0, -3 )
shape = SubResource( 18 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.43
one_shot = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
z_index = 31
emitting = false
amount = 30
lifetime = 0.5
one_shot = true
emission_shape = 1
emission_sphere_radius = 18.35
direction = Vector2( 0, -1 )
initial_velocity = 100.0
angular_velocity = 90.0
orbit_velocity = 0.1
scale_amount = 4.0
color = Color( 0.741176, 0.235294, 0.054902, 1 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_HurtBox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
